Some corrections and initial README